--- a/public/assets/style.scss
+++ b/public/assets/style.scss
@@ -1,30 +1,18 @@
 @import "@/components/style.scss";
-@import "~@feizheng/react-github-corner/dist/style.scss";
-@import "~@feizheng/react-sw-update-tips/dist/style.scss";
-
+@import "~@jswork/react-github-corner/dist/style.scss";
+@import "~@jswork/react-sw-update-tips/dist/style.scss";
+@import "~@jswork/react-demokit/dist/style.scss";
 
 .app-container {
-  .button {
-    background: #3cc51f;
-    width: 100%;
-    display: block;
-    margin-bottom: 10px;
-    border-radius: 10px;
-    color: #fff;
-    padding: 20px;
-    border: none;
-
-    &:active {
-      background: darken(#3cc51f, 10%);
-    }
-
-    &:focus {
-      outline: none;
-    }
+  .is-body {
+    background: #fff;
+    width: 40%;
+    margin: 0 auto;
   }
 
-  .react-details{
-    border:2px solid gray;
-    padding: 50px;
+  .react-details {
+    border: 2px solid gray;
+    padding: 20px;
+    margin: 40px;
   }
 }
